<resources>
    <string name="app_name">QuickMath</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="submit">E N T E R</string>
    <string name="_0">0</string>
    <string name="sub"><![CDATA[<]]></string>
    <string name="qpart1">123</string>
    <string name="sign">+</string>
    <string name="qpart2">123</string>
    <string name="streak">0</string>
    <string name="equal">=</string>
    <string name="quick_math">Quick Math!</string>
    <string name="add_sub">ADDITION/SUBTRACTION</string>
    <string name="add_sub2">2 NUMBERS</string>
    <string name="add_sub3">3 NUMBERS</string>
</resources>
