<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:gravity="center"
        android:text="@string/quick_math"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="56sp"
        app:fontFamily="@font/bangers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:gravity="center">

        <Button
            android:id="@+id/addsub2"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_purple"
            android:padding="5dp"
            android:text="@string/add_sub2"
            android:textSize="24sp"
            app:fontFamily="@font/roboto" />

        <Button
            android:id="@+id/addsub3"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_purple"
            android:padding="5dp"
            android:text="@string/add_sub3"
            android:textSize="24sp"
            app:fontFamily="@font/roboto" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/add_sub"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:fontFamily="@font/bangers" />

</RelativeLayout>